upgrade eclipse-platform-ui (4.29-1) unstable